utils/tree-sitter-remora/test/corpus/bind.txt
================
Bind val 1
================

(def (val id1 #t))

---

(program
 (valbind
  id: (id)
  exp: (atomexp (litatom lit: (boollit)))))

================
Bind val 2
================

(def (val (id1 : Int) #t))

---

(program
 (valbind
  id: (id)
  type: (immedtype)
  exp: (atomexp (litatom lit: (boollit)))))

================
Bind fun 1
================

(def (fun (f1 (x1 Int) : Int) #t))

---

(program
 (funbind
  id: (id)
  (args
   arg: (id)
   type: (immedtype))
  ret_type: (immedtype)
  body: (atomexp (litatom lit: (boollit)))))

================
Bind fun 2
================

(def (fun (@f1 (&id1) ($id2) (x1 Int) : Int) #t))

---

(program
 (funbind
  id: (id)
  tvars: (id)
  ivars: (id)
  (args
   arg: (id)
   type: (immedtype))
  ret_type: (immedtype)
  body: (atomexp (litatom lit: (boollit)))))

================
Bind fun 3
================

(def (fun (@f1 _ ($id1 $id2) (x1 Int) : Int) #t))

---

(program
 (funbind
  id: (id)
  ivars: (id)
  ivars: (id)
  (args
   arg: (id)
   type: (immedtype))
  ret_type: (immedtype)
  body: (atomexp (litatom lit: (boollit)))))

================
Bind t-fun 1
================

(def (t-fun (tf1 (&tvarid) : Int) #t))

---

(program
 (tfunbind
  id: (id)
  tvars: (id)
  ret_type: (immedtype)
  body: (atomexp (litatom lit: (boollit)))))

================
Bind t-fun 2
================

(def (t-fun (tf1 (*tvar1 &tvar2)) #t))

---

(program
 (tfunbind
  id: (id)
  tvars: (id)
  tvars: (id)
  body: (atomexp (litatom lit: (boollit)))))

================
Bind i-fun 
================

(def (i-fun (if1 ($ivar1 @ivar2) : Int) #t))

---

(program
 (ifunbind
  id: (id)
  ivars: (id)
  ivars: (id)
  ret_type: (immedtype)
  body: (atomexp (litatom lit: (boollit)))))

================
Bind type 1
================

(def (type &tid1 Int))

---

(program
 (typebind
  id: (id)
  type: (immedtype)))

================
Bind type 2
================

(def (type *tid1 (-> (Int Bool) Int)))

---

(program
 (typebind
  id: (id)
  type: (functiontype
	 argtype: (immedtype)
	 argtype: (immedtype)
	 returntype: (immedtype))))

================
Bind ispace 
================

(def (ispace $ivar $dimid))

---

(program
 (ispacebind
  ispacevar: (id)
  ispace: (dollardim (id))))
