utils/tree-sitter-remora/test/corpus/dim.txt
================
Dim dollar
================

(def (ispace $ivar $dimid))

---

(program
 (defdecl
   bind: (ispacebind
	  ispacevar: (dollarispacevar (dollid))
	  ispace: (dollardim (dollid)))))

================
Dim nat
================

(def (ispace $ivar 4))

---

(program
 (defdecl
   bind: (ispacebind
	  ispacevar: (dollarispacevar (dollid))
	  ispace: (natdim (nat)))))

================
Dim plusdim
================

(def (ispace $ivar (+ $dimid1)))

---

(program
 (defdecl
   bind: (ispacebind
	  ispacevar: (dollarispacevar (dollid))
	  ispace: (plusdim
		   dim: (dollardim (dollid))))))


================
Dim timesdim
================

(def (ispace $ivar (* 42)))

---

(program
 (defdecl
   bind: (ispacebind
	  ispacevar: (dollarispacevar (dollid))
	  ispace: (timesdim
		   dim: (natdim (nat))))))

================
Dim minusdim
================

(def (ispace $ivar (- (+ $id1 42))))

---

(program
 (defdecl
   bind: (ispacebind
	  ispacevar: (dollarispacevar (dollid))
	  ispace: (minusdim
		   dim: (plusdim
			 dim: (dollardim (dollid))
			 dim: (natdim (nat)))))))
