utils/tree-sitter-remora/test/corpus/entry.txt
================
Entry Declarations basic
================

(entry (foo (arg1 Int))  #t)

---

(program
  (entry
    id: (id)
    args: (args
      arg: (id)
      type: (immedtype))
    body: (atomexp (litatom lit: (boollit)))))

================
Entry Declarations multiple args
================

(entry (foo (arg1 Int) (arg2 Int))  #t)

---

(program
  (entry
    id: (id)
    args: (args
      arg: (id)
      type: (immedtype)
      arg: (id)
      type: (immedtype))
    body: (atomexp (litatom lit: (boollit)))))

================
Entry Declarations return type
================

(entry (foo (arg1 Int) (arg2 Int) : Int) #t)

---

(program
  (entry
    id: (id)
    args: (args
      arg: (id)
      type: (immedtype)
      arg: (id)
      type: (immedtype))
    return_type: (immedtype)
    body: (atomexp (litatom lit: (boollit)))))

================
Entry Declarations no args
================

(entry (foo ())  #t)

---

(program
  (entry
    id: (id)
    args: (args)
    body: (atomexp (litatom lit: (boollit)))))
